# techStackAnalyzer

./: .gitignore  README.md  analyze.py  pyproject.toml  requirements.txt
techstack/: __init__.py  cli.py  detector.py  image_gatherer.py  reporter.py  script_generator.py  tts.py  utils.py  video_generator.py
