[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techstack-analyzer"
version = "0.1.0"
description = "CLI tool to analyze the tech stack of any public GitHub repository"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PyGithub>=2.1.1",
    "requests>=2.31.0",
    "gTTS>=2.5.0",
    "edge-tts>=6.1.9",
    "moviepy>=2.0.0",
    "Pillow>=10.0.0",
    "rich>=13.7.0",
]

[project.scripts]
techstack = "techstack.cli:main"

[tool.setuptools.packages.find]
include = ["techstack*"]
